syntax = "proto3";
package org.roylance.yadel;

message WorkerConfiguration {
    string id = 1;
    string ip = 2;
    string port = 3;
    string host = 4;
    string initialized_time = 5;
    WorkerState state = 6;
    Task task = 7;
    Dag dag = 8;
    uint64 minutes_before_task_reset = 9;
    string task_start_time = 10;
}

enum WorkerState {
    WORKING = 0;
    IDLE = 1;
}

enum WorkerToManagerMessageType {
    REGISTRATION = 0;
}

enum ManagerToManagerMessageType {
    ENSURE_WORKERS_WORKING = 0;
}

enum ActorRole {
    MANAGER = 0;
    WORKER = 1;
}

message Log {
    string id = 1;
    string message = 2;
}

message Dag {
    string id = 1;
    string display = 2;
    repeated Task flattened_tasks = 3;
    int64 execution_date = 4;
    int64 start_date = 5;
    int64 end_date = 6;
    int64 duration = 7;
    repeated Task uncompleted_tasks = 8;
    repeated Task processing_tasks = 9;
    repeated Task errored_tasks = 10;
    repeated Task completed_tasks = 11;
    Dag parent = 12;
}

message Task {
    string id = 1;
    string display = 2;
    repeated TaskDependency dependencies = 3;
    string dag_id = 4;
    repeated Log logs = 5;
    int64 execution_date = 6;
    int64 start_date = 7;
    int64 end_date = 8;
    int64 duration = 9;
    string first_context_base_64 = 10;
    string second_context_base_64 = 11;
    string third_context_base_64 = 12;
    bool is_waiting_for_another_dag_task = 13;
}

message TaskDependency {
    string id = 1;
    string parent_task_id = 2;
}

message AddTaskToDag {
    string id = 1;
    Task parent_task = 2;
    Task new_task = 3;
    string first_context_base_64 = 4;
    string second_context_base_64 = 5;
    string third_context_base_64 = 6;
}

message CompleteTask {
    string id = 1;
    Task task = 2;
    WorkerConfiguration worker_configuration = 3;
    bool is_error = 5;
}

message AllDags {
    repeated Dag dags = 1;
    repeated WorkerConfiguration workers = 2;
    bool include_unprocessed = 3;
    bool include_file_saved = 4;
}