syntax = "proto3";
package org.roylance.yadel;

import "yadel_report.proto";

message CommonAction {
    org.roylance.yadel.UIYadelRequest request = 1;
    org.roylance.yadel.UIYadelResponse response = 2;
}

message ReportController {
    CommonAction delete_dag = 1;
    CommonAction current = 2;
    CommonAction get_dag_status = 3;
}